# hirnu-fine-tuning

./: .gitignore  README.md  TRAINING_READINESS_REPORT.md  main.py  pyproject.toml
configs/: data_config.yaml  training_config.yaml
data/raw/: HIRNU_LANGUAGE_SUMMARY.md
data/raw/grammar/: basic_rules.txt  nouns.txt  particles.txt  phonetics.txt  pronouns.txt  sentence_structure.txt  verb_conjugation.txt  verb_forms.txt
data/raw/texts/: examples.txt  story_01.txt
data/raw/vocabulary/: colors.txt  common_words.txt  nouns.txt  numerals.txt  verbs.txt
data/samples/: README.md  example_chat.jsonl  example_completion.jsonl
docs/: DATA_PREPARATION.md  PROJECT_SUMMARY.md  SETUP.md  TRAINING.md
scripts/: download_model.py  evaluate.py  fuse.py  inference.py  prepare_data.py  train.py
src/: model.py
src/data/: converter.py  dataset_builder.py  preprocessor.py  validator.py
src/evaluation/: evaluator.py  metrics.py
src/training/: callbacks.py  config.py  trainer.py
src/utils/: logging_utils.py  mlx_helpers.py
